<resources>
    <string name="app_name">InstituteManagement</string>
    <string name="rupinderjeet_singh">Harneet Kaur</string>
    <string name="by">By</string>
    <string name="get_started">Get Started</string>
    <string name="roll_no_842">Roll no: 47</string>
    <string name="cse_6th_sem">CSE 6th Sem</string>
    <string name="institute_management_system">Institute Management System</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="courses">Courses</string>
    <string name="students">Students</string>
    <string name="faculty">Faculty</string>
    <string name="detail_update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_new">Add New</string>
    <string name="welcome">Welcome</string>
    <string name="faculty_menu">Faculty Menu</string>
    <string name="main_menu">Main Menu</string>
    <string name="courses_menu">Courses Menu</string>
    <string name="students_menu">Students Menu</string>
    <string name="course_name">Course Name</string>
    <string name="fee">Fee</string>
    <string name="save">Save</string>
    <string name="add_new_courses">Add New Courses</string>
    <string name="duration">Duration(Years)</string>
    <string name="course_id">Course ID</string>
    <string name="view_all_courses">View All Courses</string>
    <string name="reset">Reset</string>
    <string name="update_courses">Update Courses</string>
    <string name="add_new_faculty">Add New Faculty</string>
    <string name="faculty_id">Faculty ID</string>
    <string name="experience_years">Experience(Years)</string>
    <string name="full_address">Full Address</string>
    <string name="qualification">Qualification</string>
    <string name="full_name">Full Name</string>
    <string name="list_of_faculty">List of Faculty</string>
    <string name="designation">Designation</string>
    <string name="salary">Salary</string>
    <string name="delete_faculty">Delete Faculty</string>
    <string name="faculty_list">Faculty List</string>
    <string name="student_id">Student ID</string>
    <string name="all_students">View All Students</string>
    <string name="contact_number">Contact Number</string>
    <string name="father_name">Father Name</string>
    <string name="roll_no">Roll No</string>
    <string name="trade_stream">Trade/Stream</string>
    <string name="all_courses">All Courses</string>
    <string name="all_studentss">All Students</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="semester">Semester</string>

</resources>
