<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateStudents"
    tools:ignore="LabelFor">

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        app:layout_constraintStart_toStartOf="@+id/spinnerTradeUpdateStudents"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTradeUpdateStudents" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/full_address"
        app:layout_constraintStart_toStartOf="@+id/fullAddressUpdateStudents"
        app:layout_constraintTop_toBottomOf="@+id/fatherNameUpdateStudents" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/father_name"
        app:layout_constraintStart_toStartOf="@+id/fatherNameUpdateStudents"
        app:layout_constraintTop_toBottomOf="@+id/fullNameUpdateStudents" />

    <EditText
        android:id="@+id/fatherNameUpdateStudents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView49" />

    <EditText
        android:id="@+id/fullNameUpdateStudents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <EditText
        android:id="@+id/fullAddressUpdateStudents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/contact_number"
        app:layout_constraintStart_toStartOf="@+id/contactNoUpdateStudents"
        app:layout_constraintTop_toBottomOf="@+id/fullAddressUpdateStudents" />

    <EditText
        android:id="@+id/contactNoUpdateStudents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView51" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/student_id"
        app:layout_constraintStart_toStartOf="@+id/studentIdUpdateStudents"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rollNoUpdateStudents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <EditText
        android:id="@+id/studentIdUpdateStudents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_no"
        app:layout_constraintStart_toStartOf="@+id/studentIdUpdateStudents"
        app:layout_constraintTop_toBottomOf="@+id/studentIdUpdateStudents" />

    <Button
        android:id="@+id/button33"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:text="@string/all_students"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButtonUpdateStudents" />

    <Button
        android:id="@+id/saveButtonUpdateStudents"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="@+id/button33"
        app:layout_constraintTop_toBottomOf="@+id/contactNoUpdateStudents" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trade_stream"
        app:layout_constraintStart_toStartOf="@+id/rollNoUpdateStudents"
        app:layout_constraintTop_toBottomOf="@+id/rollNoUpdateStudents" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/semester"
        app:layout_constraintStart_toEndOf="@+id/spinnerTradeUpdateStudents"
        app:layout_constraintTop_toBottomOf="@+id/rollNoUpdateStudents" />

    <Spinner
        android:id="@+id/spinnerSemesterUpdateStudents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/rollNoUpdateStudents"
        app:layout_constraintStart_toStartOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <Spinner
        android:id="@+id/spinnerTradeUpdateStudents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        app:layout_constraintEnd_toStartOf="@+id/resetButtonUpdateStudents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView52" />

    <Button
        android:id="@+id/resetButtonUpdateStudents"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@+id/button33"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>